--- a/style.css
+++ b/style.css
@@ -86,4 +86,63 @@ header .header_container h1 {
 }
 .parent_section .data {
   width: 50%;
+  max-height: 450px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  border: none;
+}
+.parent_section .data .user-card {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  margin-bottom: 4px;
+  justify-content: space-evenly;
+  max-height: 80px;
+  height: 100%;
+  padding: 5px;
+  background-color: #ffeeee;
+  border-radius: 8px;
+}
+.parent_section .data .user-card p {
+  font-size: 22px;
+  text-align: center;
+  font-weight: 700;
+}
+.parent_section .data .user-card .data-p {
+  min-height: 50px;
+  max-height: 50px;
+  height: 100%;
+  border-radius: 8px;
+  padding-top: 10px;
+}
+.parent_section .data .user-card .data-p:first-child {
+  min-width: 170px;
+  max-width: 170px;
+  width: 100%;
+  background-color: red;
+}
+.parent_section .data .user-card .data-p:nth-child(2) {
+  min-width: 40px;
+  max-width: 40px;
+  width: 100%;
+  background-color: green;
+}
+.parent_section .data .user-card .data-p:nth-child(3) {
+  min-width: 130px;
+  max-width: 130px;
+  width: 100%;
+  background-color: gray;
+  margin-left: 10px;
+}
+.parent_section .data .user-card .data-p:nth-child(4) {
+  min-width: 100px;
+  max-width: 100px;
+  width: 100%;
+  background-color: blue;
+}
+.parent_section .data .user-card .data-p:nth-child(5) {
+  min-width: 100px;
+  max-width: 100px;
+  width: 100%;
+  background-color: yellow;
 }/*# sourceMappingURL=style.css.map */
